# schoolTimetableCreator

./: CMakeLists.txt
include/: filewriter.h  mainWindow.h  master.h  rule_c.h  teacher_c.h  timetable_c.h
src/: filewriter.cpp  main.cpp  mainWindow.cpp  mainWindow.ui  master.cpp  rule_c.cpp  teacher_c.cpp  timetable_c.cpp
